--- a/aws/index.html
+++ b/aws/index.html
@@ -3,78 +3,297 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Game Matchmaking Test</title>
+        <title>Save The Ship — Matchmaking</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap" rel="stylesheet" />
         <style>
+            * {
+                box-sizing: border-box;
+            }
+
             body {
                 margin: 0;
-                font-family: Arial, sans-serif;
-                background: linear-gradient(135deg, #1e3c72, #2a5298);
+                font-family: "Outfit", system-ui, sans-serif;
+                background: #0a1628;
+                min-height: 100vh;
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                height: 100vh;
-                color: white;
+                color: #e8f0fc;
+                position: relative;
+                overflow: hidden;
+            }
+
+            body::before {
+                content: "";
+                position: absolute;
+                inset: 0;
+                background:
+                    radial-gradient(ellipse 80% 50% at 50% -20%, rgba(34, 126, 230, 0.25), transparent),
+                    radial-gradient(ellipse 60% 40% at 80% 60%, rgba(20, 184, 166, 0.12), transparent),
+                    radial-gradient(ellipse 50% 30% at 20% 80%, rgba(99, 102, 241, 0.1), transparent);
+                pointer-events: none;
             }
 
             .card {
-                background: rgba(0, 0, 0, 0.6);
-                padding: 30px;
-                border-radius: 12px;
-                width: 350px;
+                position: relative;
+                background: linear-gradient(165deg, rgba(22, 42, 72, 0.95) 0%, rgba(12, 28, 48, 0.98) 100%);
+                padding: 2.5rem;
+                border-radius: 20px;
+                width: 100%;
+                max-width: 380px;
                 text-align: center;
-                box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
+                box-shadow:
+                    0 25px 50px -12px rgba(0, 0, 0, 0.5),
+                    0 0 0 1px rgba(255, 255, 255, 0.06),
+                    inset 0 1px 0 rgba(255, 255, 255, 0.06);
+                backdrop-filter: blur(12px);
             }
 
-            h1 {
-                margin-bottom: 20px;
+            .game-name {
+                font-size: 2.25rem;
+                font-weight: 700;
+                margin: 0 0 0.35rem 0;
+                letter-spacing: 0.02em;
+                background: linear-gradient(135deg, #38bdf8 0%, #0ea5e9 35%, #06b6d4 100%);
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+                background-clip: text;
+                text-shadow: 0 0 40px rgba(14, 165, 233, 0.3);
+                filter: drop-shadow(0 2px 8px rgba(14, 165, 233, 0.25));
+            }
+
+            .card-subtitle {
+                font-size: 0.9375rem;
+                color: #94a3b8;
+                margin-bottom: 1.75rem;
+                font-weight: 500;
+                letter-spacing: 0.05em;
+                text-transform: uppercase;
             }
 
             input {
                 width: 100%;
-                padding: 10px;
-                border-radius: 6px;
-                border: none;
-                margin-bottom: 15px;
-                font-size: 16px;
+                padding: 0.875rem 1rem;
+                border-radius: 12px;
+                border: 1px solid rgba(255, 255, 255, 0.1);
+                margin-bottom: 1rem;
+                font-size: 1rem;
+                font-family: inherit;
+                background: rgba(15, 23, 42, 0.8);
+                color: #e2e8f0;
+                transition: border-color 0.2s, box-shadow 0.2s;
+            }
+
+            input::placeholder {
+                color: #64748b;
+            }
+
+            input:focus {
+                outline: none;
+                border-color: rgba(34, 126, 230, 0.6);
+                box-shadow: 0 0 0 3px rgba(34, 126, 230, 0.15);
             }
 
             button {
                 width: 100%;
-                padding: 12px;
+                padding: 0.875rem 1.25rem;
                 border: none;
-                border-radius: 6px;
-                font-size: 16px;
+                border-radius: 12px;
+                font-size: 1rem;
+                font-weight: 600;
                 cursor: pointer;
-                background: #4caf50;
+                font-family: inherit;
+                background: linear-gradient(135deg, #0ea5e9 0%, #0284c7 100%);
                 color: white;
-                transition: 0.2s;
+                transition: transform 0.15s, box-shadow 0.2s, opacity 0.2s;
+                box-shadow: 0 4px 14px rgba(14, 165, 233, 0.35);
             }
 
             button:hover {
-                background: #45a049;
+                transform: translateY(-1px);
+                box-shadow: 0 6px 20px rgba(14, 165, 233, 0.45);
+            }
+
+            button:active {
+                transform: translateY(0);
+            }
+
+            button:disabled {
+                opacity: 0.7;
+                cursor: not-allowed;
+                transform: none;
             }
 
             .status {
-                margin-top: 15px;
-                font-size: 14px;
-                min-height: 20px;
+                margin-top: 1.25rem;
+                font-size: 0.9375rem;
+                min-height: 1.5rem;
+                color: #94a3b8;
+                font-weight: 500;
+            }
+
+            .status.success {
+                color: #34d399;
+            }
+
+            .status.error {
+                color: #f87171;
             }
 
             .result {
-                margin-top: 15px;
-                background: rgba(255, 255, 255, 0.1);
-                padding: 10px;
-                border-radius: 6px;
-                font-size: 14px;
+                margin-top: 1rem;
+                background: rgba(15, 23, 42, 0.7);
+                padding: 1rem 1.25rem;
+                border-radius: 12px;
+                font-size: 0.875rem;
                 word-wrap: break-word;
+                text-align: left;
+                border: 1px solid rgba(255, 255, 255, 0.06);
+                line-height: 1.6;
+            }
+
+            .result strong {
+                color: #94a3b8;
+                font-weight: 600;
+            }
+
+            .result:empty {
+                display: none;
+            }
+
+            /* Lobby view */
+            .lobby-view {
+                display: none;
+                position: relative;
+                background: linear-gradient(165deg, rgba(22, 42, 72, 0.95) 0%, rgba(12, 28, 48, 0.98) 100%);
+                padding: 2.5rem;
+                border-radius: 20px;
+                width: 100%;
+                max-width: 400px;
+                text-align: center;
+                box-shadow:
+                    0 25px 50px -12px rgba(0, 0, 0, 0.5),
+                    0 0 0 1px rgba(255, 255, 255, 0.06),
+                    inset 0 1px 0 rgba(255, 255, 255, 0.06);
+                backdrop-filter: blur(12px);
+            }
+
+            .lobby-view.visible {
+                display: block;
+            }
+
+            .card.hidden {
+                display: none;
+            }
+
+            .lobby-view .game-name {
+                font-size: 2rem;
+                margin-bottom: 0.25rem;
+            }
+
+            .lobby-view .lobby-label {
+                font-size: 0.8125rem;
+                color: #64748b;
+                text-transform: uppercase;
+                letter-spacing: 0.08em;
+                margin-bottom: 1.5rem;
+            }
+
+            .lobby-info {
+                background: rgba(15, 23, 42, 0.7);
+                padding: 1rem 1.25rem;
+                border-radius: 12px;
+                font-size: 0.8125rem;
+                text-align: left;
+                margin-bottom: 1.5rem;
+                border: 1px solid rgba(255, 255, 255, 0.06);
+                color: #94a3b8;
+            }
+
+            .lobby-info span {
+                color: #e2e8f0;
+            }
+
+            .players-title {
+                font-size: 0.8125rem;
+                color: #64748b;
+                text-transform: uppercase;
+                letter-spacing: 0.08em;
+                margin-bottom: 0.75rem;
+                text-align: left;
+            }
+
+            .player-list {
+                list-style: none;
+                margin: 0;
+                padding: 0;
+            }
+
+            .player-item {
+                display: flex;
+                align-items: center;
+                gap: 0.75rem;
+                padding: 0.75rem 1rem;
+                background: rgba(15, 23, 42, 0.6);
+                border-radius: 12px;
+                margin-bottom: 0.5rem;
+                border: 1px solid rgba(255, 255, 255, 0.06);
+                text-align: left;
+            }
+
+            .player-item.you {
+                border-color: rgba(14, 165, 233, 0.4);
+                background: rgba(14, 165, 233, 0.08);
+            }
+
+            .player-item .avatar {
+                width: 36px;
+                height: 36px;
+                border-radius: 10px;
+                background: linear-gradient(135deg, #0ea5e9 0%, #06b6d4 100%);
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-weight: 700;
+                font-size: 0.875rem;
+                color: white;
+                flex-shrink: 0;
+            }
+
+            .player-item.empty .avatar {
+                background: rgba(100, 116, 139, 0.4);
+                color: rgba(255, 255, 255, 0.3);
+            }
+
+            .player-item .name {
+                font-weight: 600;
+                color: #e2e8f0;
+            }
+
+            .player-item.empty .name {
+                font-weight: 500;
+                color: #64748b;
+            }
+
+            .player-item .badge {
+                margin-left: auto;
+                font-size: 0.6875rem;
+                padding: 0.2rem 0.5rem;
+                border-radius: 6px;
+                background: rgba(14, 165, 233, 0.25);
+                color: #38bdf8;
+                font-weight: 600;
             }
         </style>
     </head>
     <body>
-        <div class="card">
-            <h1>🎮 Matchmaking</h1>
+        <div class="card" id="matchmakingCard">
+            <h1 class="game-name">Save The Ship</h1>
+            <p class="card-subtitle">Matchmaking</p>
 
-            <input type="text" id="playerName" placeholder="Enter your name" />
+            <input type="text" id="playerName" placeholder="Enter your name" autocomplete="off" />
 
             <button onclick="findMatch()">Find Match</button>
 
@@ -82,17 +301,74 @@
             <div class="result" id="result"></div>
         </div>
 
+        <div class="lobby-view" id="lobbyView">
+            <h1 class="game-name">Save The Ship</h1>
+            <p class="lobby-label">Game Lobby</p>
+            <div class="lobby-info" id="lobbyInfo"></div>
+            <p class="players-title">Players in lobby</p>
+            <ul class="player-list" id="playerList"></ul>
+        </div>
+
         <script>
             const API_URL =
                 "https://knrwxjbki3.execute-api.us-west-2.amazonaws.com/matchmake";
+
+            const MAX_LOBBY_PLAYERS = 5;
+
+            function showLobbyView(playerName, data) {
+                document.getElementById("matchmakingCard").classList.add("hidden");
+                const lobbyView = document.getElementById("lobbyView");
+                lobbyView.classList.add("visible");
+
+                document.getElementById("lobbyInfo").innerHTML = `
+                    <strong>Lobby ID</strong> <span>${data.lobbyId || "—"}</span> &nbsp;·&nbsp;
+                    <strong>Server</strong> <span>${data.serverIp || "—"}:${data.port ?? "—"}</span>
+                `;
+
+                const playerList = document.getElementById("playerList");
+                const players = data.players || [playerName];
+                const list = Array.isArray(players) ? [...players] : [playerName];
+                const emptySlots = Math.max(0, MAX_LOBBY_PLAYERS - list.length);
+
+                playerList.innerHTML = "";
+                list.forEach((p) => {
+                    const isYou = String(p || "").trim().toLowerCase() === String(playerName || "").trim().toLowerCase();
+                    const li = document.createElement("li");
+                    li.className = isYou ? "player-item you" : "player-item";
+                    const initial = (p || "?").charAt(0).toUpperCase();
+                    li.innerHTML = `
+                        <span class="avatar">${initial}</span>
+                        <span class="name">${escapeHtml(p || "Unknown")}</span>
+                        ${isYou ? '<span class="badge">You</span>' : ""}
+                    `;
+                    playerList.appendChild(li);
+                });
+                for (let i = 0; i < emptySlots; i++) {
+                    const li = document.createElement("li");
+                    li.className = "player-item empty";
+                    li.innerHTML = `
+                        <span class="avatar">?</span>
+                        <span class="name">Waiting for player...</span>
+                    `;
+                    playerList.appendChild(li);
+                }
+            }
+
+            function escapeHtml(text) {
+                const div = document.createElement("div");
+                div.textContent = text;
+                return div.innerHTML;
+            }
 
             async function findMatch() {
                 const name = document.getElementById("playerName").value.trim();
                 const statusDiv = document.getElementById("status");
                 const resultDiv = document.getElementById("result");
 
+                statusDiv.classList.remove("success", "error");
                 if (!name) {
                     statusDiv.innerText = "Please enter a name.";
+                    statusDiv.classList.add("error");
                     return;
                 }
 
@@ -108,7 +384,7 @@
                         },
                         body: JSON.stringify({
                             action: "matchmake",
-                            playerId: name,
+                            playerName: name,
                         }),
                     });
 
@@ -117,15 +393,10 @@
                     }
 
                     const data = await response.json();
-
-                    statusDiv.innerText = "Match Found!";
-                    resultDiv.innerHTML = `
-                        <strong>Lobby ID:</strong> ${data.lobbyId}<br/>
-                        <strong>Server IP:</strong> ${data.serverIp}<br/>
-                        <strong>Port:</strong> ${data.port}
-                    `;
+                    showLobbyView(name, data);
                 } catch (err) {
                     statusDiv.innerText = "Error connecting to server.";
+                    statusDiv.classList.add("error");
                     resultDiv.innerText = err.message;
                 }
             }
