--- a/frontend/index.html
+++ b/frontend/index.html
@@ -48,6 +48,6 @@
     </div>
   </div>
   
-  <script type="module" src="src/core/main.js"></script>
+  <script type="module" src="src/main.js"></script>
 </body>
 </html>
